--- a/admin/scoreboard.html
+++ b/admin/scoreboard.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Always checking Firebase contents</title>
+    <title>Scoreboard</title>
 </head>
 <body>
 
